--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,10 @@
-#root {
+/* #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: auto auto;
   text-align: center;
-}
+} */
 
-.logo {
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -39,7 +38,7 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
 
 .auth-container {
   display: flex;
