--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
-:root {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -11,7 +15,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
 a {
   font-weight: 500;
@@ -65,4 +69,12 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.text-shadow-customTurquoise {
+  text-shadow: 
+    -2px -2px 0 #38b2ac,  
+    2px -2px 0 #38b2ac,
+    -2px 2px 0 #38b2ac,
+    2px 2px 0 #38b2ac;
 }
