--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,14 @@
-/* #root {
-  max-width: 1280px;
-  margin: auto auto;
-  text-align: center;
-} */
-
-/* .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden; /* Prevent scrolling */
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#root {
+  height: 100%; /* Make sure root takes up the full viewport */
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
 
 .auth-container {
   display: flex;
@@ -46,10 +16,7 @@
   align-items: center;
   height: 100vh;
   width: 100vw;
-  background-color: #f4f4f4;
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: relative; 
 }
 
 .auth-box {
@@ -90,10 +57,7 @@
 }
 
 .google-button {
-  display: flex;
-  justify-content: center;
   margin-top: 20px;
-  width: 100%;
 }
 
 .toggle-button {
