--- a/src/AuthComponent.css
+++ b/src/AuthComponent.css
@@ -31,8 +31,8 @@
   .auth-button {
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
-    color: white;
+    background-color: #dfdfdf;
+    color: hwb(0 18% 82%);
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -40,7 +40,8 @@
   }
   
   .auth-button:hover {
-    background-color: #0056b3;
+    background-color: #cfcfcf;
+    cursor: pointer;
   }
   
   .google-button {
