--- a/src/GameRoom.css
+++ b/src/GameRoom.css
@@ -168,3 +168,25 @@
 .carousel-button:hover {
   background-color: #0056b3;
 }
+
+/* GameRoom.css */
+
+.game-room .turn-message {
+  font-size: 2rem;
+  font-weight: bold;
+  padding-top: 20px;
+  text-align: center;
+  color: #28a745;  
+}
+
+.player.current-turn .player-profile-pic {
+  border: 5px solid #28a745;  
+  border-radius: 50%;
+}
+
+.player-profile-pic {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+}
