--- a/src/GameRoom.css
+++ b/src/GameRoom.css
@@ -102,7 +102,7 @@
   display: flex;
   justify-content: center;
   gap: 10px;  
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .player-card {
@@ -119,7 +119,7 @@
 }
 
 .cards img:hover {
-  transform: translateY(-10px) scale(1.1);
+  transform: translateY(-10px) scale(1.04);
 }
 
 .modal-overlay {
@@ -190,3 +190,134 @@
   border-radius: 50%;
   object-fit: cover;
 }
+
+.select-card-btn {
+  margin: 0 16px 0 16px;
+  background-color: green;
+  color: white;
+  padding: 5px;
+}
+
+.select-card-btn:active {
+  background-color: darkgreen;
+}
+
+
+.hint-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.hint-modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.hint-modal-content h3 {
+  margin-bottom: 15px;
+}
+
+.hint-modal-content input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
+}
+
+.hint-modal-content .submit-hint-btn {
+  background-color: green;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.hint-modal-content .submit-hint-btn:hover {
+  background-color: darkgreen;
+}
+
+.hint-modal-content .submit-hint-btn:active {
+  transform: scale(0.95);
+}
+
+.selection-message {
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  font-size: 24px;
+  font-weight: bold;
+  z-index: 1000;
+  text-align: center;
+}
+
+.showcased-card-container {
+  position: absolute;
+  top: 43%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 999;
+}
+
+.showcased-card {
+  max-width: 400px;
+  max-height: 400px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.flipped-card {
+  background-color: #1c245e;
+  border: 3px solid orange;
+  border-radius: 10px;
+  width: 200px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.guessygoose-image {
+  width: 50%;
+  height: auto;
+}
+
+.showcased-card-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.selection-message, .word-message {
+  font-size: 2em;
+  font-weight: bold;
+  color: #333;
+  padding-top: 20px;
+  text-align: center;
+  margin-top: 20px;
+  animation: fadeInOut 1s;
+}
+
+@keyframes fadeInOut {
+  0%, 100% { opacity: 0; }
+  50% { opacity: 1; }
+}
+
