--- a/src/GameRoom.css
+++ b/src/GameRoom.css
@@ -321,3 +321,16 @@
   50% { opacity: 1; }
 }
 
+.hint-text {
+  background-color: #333;  
+  color: #fff;  
+  padding: 10px 20px;  
+  border-radius: 5px;  
+  margin: 0px auto;  
+  text-align: center;  
+  max-width: 80%;  
+  font-weight: bold;  
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);  
+}
+
+
